--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   navigator_scope: ^1.0.1
+  syncfusion_flutter_charts: ^19.2.55
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
@@ -50,7 +52,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  syncfusion_flutter_charts: ^24.1.43+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
